testsuite/tests/typecheck/should_fail/T9260.stderr

T9260.hs:12:8: error:
    Couldn't match type ‘2’ with ‘1’
    Expected type: Fin 1
      Actual type: Fin (1 + 1)
    In the expression: Fsucc Fzero
    In an equation for ‘test’: test = Fsucc Fzero
